# fitness-progress

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
app/: streamlit_editor.py
src/progress_aligner/: alignment.py  cli.py  config.py  debug_render.py  media_import.py  pose.py  project_store.py  transforms.py  video_moment_picker.py  video_render.py  video_sampling.py  video_scoring.py
tools/: _test_ffmpeg_filters.py  debug_hdr_frame.py
