[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-progress"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "streamlit>=1.35",
]

[project.scripts]
fitness-progress = "progress_aligner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
